--- a/index.html
+++ b/index.html
@@ -468,11 +468,11 @@ https://templatemo.com/tm-545-finance-business
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <p>Copyright &copy; 2020 Financial Business Co., Ltd.
+           <!--  <p>Copyright &copy; 2020 Financial Business Co., Ltd.
             
             - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">TemplateMo</a><br>
             Distributed By: <a rel="nofollow noopener" href="https://themewagon.com" target="_blank">ThemeWagon</a>
-          </p>
+          </p> -->
           </div>
         </div>
       </div>
